[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Global/Player.gd" type="Script" id=1]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="ChargeStart" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[node name="ChargeEnd" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Timer5" type="Timer" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
